# tv-kit

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  HANDOFF.md  README.md  TASKS.md  deploy.sh  package.json  tsconfig.json  tsconfig.svelte.json  tv-dashboard.config  tv-dashboard.pid  tv-remote-large.pid  tv-remote.pid
.deploy-stage/: tvserverd.service
.deploy-stage/dashboard/: index.html
.deploy-stage/remote/: index.html  manifest.webmanifest
.kanban/: README.md
.kanban/done/: TASK-032-podcast-page-and-playback.md  TASK-036-operational-lessons-cli-docs.md  TASK-037-centralized-macos-frame-theme.md  TASK-038-home-golf-news-motion.md
.kanban/tasks/: TASK-001-sync-news-scroll-and-font-size.md  TASK-002-local-ai-agent-chat.md  TASK-003-sarpur-ruv-layout.md  TASK-004-agent-operations-index.md  TASK-005-schedules-mock.md  TASK-006-deildu-title-validation.md  TASK-007-real-deildu-import-task.md  TASK-008-scheduled-task-notification-widget.md  TASK-009-home-live-tv-streams.md  TASK-010-home-news-detail-navigation-and-layout.md  TASK-010-websocket-connection-flapping.md  TASK-011-adaptive-video-osd.md  TASK-012-relocate-player-and-fullscreen-control.md  TASK-013-home-ga-tee-times.md  TASK-014-deildu-playback-resume.md  TASK-015-idempotent-mpv-playback-control.md  TASK-016-verify-multifile-torrent-completion.md  TASK-017-direct-mpv-track-control.md  TASK-018-fast-secret-safe-deildu-queries.md  TASK-019-refresh-tv-kit-runtime-docs.md  TASK-020-add-pi-tv-extension.md  TASK-021-fix-agent-conversation-memory.md  TASK-022-deildu-title-enrichment.md  TASK-023-catalog-cleanup-verification-rules.md  TASK-024-refresh-dashboard-after-deildu-scan.md  TASK-025-deildu-full-title-scrape-and-parser.md  TASK-026-compact-deildu-dashboard-header.md  TASK-027-deildu-show-detail-and-archive-playback.md  TASK-028-native-tv-dashboard-frame.md  TASK-029-native-tv-frame-port.md  TASK-030-public-torrent-index.md  TASK-031-titan-test-environment.md  TASK-032-podcast-page-and-playback.md  TASK-033-podcast-episode-artwork.md  TASK-034-remote-control-contract-audit.md  (+4 more)
.pi/: skills
apps/tv-frame/: CMakeLists.txt
apps/tv-frame/qml/: DeilduView.qml  HomeView.qml  LoadingOverlay.qml  Main.qml  MediaProgramView.qml  MediaView.qml  NewsView.qml  OsdPanel.qml  PlayerHud.qml  PodcastView.qml  RadioView.qml  Theme.qml  ThemeColors.qml  ThemeMetrics.qml  ThemeMotion.qml  ThemeTypography.qml  ThemeWallpaper.qml  TvView.qml
apps/tv-frame/src/: frameclient.cpp  frameclient.h  main.cpp  mpvvideo.cpp  mpvvideo.h
apps/tv-frame/tests/: tst_frameclient.cpp
docs/: AI_AGENT_TOOLS.md
ops/: install-tvserverd.sh
scripts/: golfboxctl
tests/: agent.test.ts  commands.test.ts  deildu-title-cleanup.test.ts  podcast-feed.test.ts  ruv-backend.test.ts  tvctl.test.ts
tools/: frame-health-check.ts  tvctl
(+78 files in other folders)
